# FFmpegX

app/: build.gradle
app/src/androidTest/java/com/xys/ffmpegx/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/xys/ffmpegx/: MainActivity.java
app/src/main/java/com/xys/ffmpegx/media/: FFVideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xys/ffmpegx/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
